[project]
name = "medical-insurance-cost-prediciton"
version = "0.1.0"
description = "The model to predict insurance cost based on personal details"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]



